// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
> 1 | fragment HasIdFields on U { a b c }
    |          ^^^^^^^^^^^ Fragment named "HasIdFields" already defined in:
	-1866344359.graphql
`;

exports[` 2`] = `
> 1 | fragment HasIdFields on U { a b c }
    |          ^^^^^^^^^^^ Fragment named "HasIdFields" already defined in:
	-1559743294.graphql
	-1866344359.graphql
`;
